--- a/00-Introduction/source.tex
+++ b/00-Introduction/source.tex
@@ -1,88 +1,95 @@
 \chapter*{Introduction générale}
 
-%\subsection*{Réseaux de neurones artificiels et inspiration biologique}
-
 Les systèmes biologiques qui nous entourent présentent une incroyable diversité de structures leur permettant d'évoluer et de s'adapter à leur environnement.
-Des systèmes en apparence simples présentent ainsi des comportements d'optimisation. Le blob est par exemple un être unicellulaire capable de s'étendre sur plusieurs mètres. Uniquement grâce aux communications chimiques opérant au sein de la membrane, il est capable de trouver le chemin le plus court dans un labyrinthe entre deux points sur lesquels sont placés de la nourriture \cite{Nakagaki2000IntelligenceMB}.
+Des systèmes en apparence simples présentent ainsi des capacités d'optimisation de tâches. Le blob est par exemple un être unicellulaire capable de s'étendre sur plusieurs mètres. Uniquement grâce aux communications chimiques opérant au sein de la membrane, il est capable de trouver le chemin le plus court dans un labyrinthe entre deux points sur lesquels sont placés de la nourriture \cite{Nakagaki2000IntelligenceMB}, de retrouver une configuration optimale d'un réseau de transport et sont même capables d'apprentissage~: deux entités fusionnant se transmettent des connaissances de leur environnement, montrant qu'elles ont appris à un point de l'information sur ce dernier.
 Les colonies de fourmis, quant à elles constituées de milliers, voire de millions d'individus, sont capables de s'auto-organiser pour effectuer des tâches complexes de coopération pour construire leur nid, se défendre face aux prédateurs et trouver leur nourriture via une communication par leurs phéromones, son et toucher \cite{jackson_communication_2006}.
-Autrement dit, ces systèmes biologiques présentent des capacités de calcul remarquables, le calcul étant en effet défini comme la propriété de traiter et d'exploiter l'information reçue de son environnement.
-Ces stratégies mises en place par des systèmes biologiques ont inspiré de nombreux algorithmes d'optimisation s'inspirant des colonies de fourmis, des essaims d'abeilles, des groupes de chats, des bancs de poissons, des baleines, ou encore des poules.
+Autrement dit, ces systèmes biologiques présentent des capacités de calcul remarquables. 
+Toutes ces stratégies mises en place par des systèmes biologiques ont inspiré de nombreux algorithmes d'optimisation imitant les colonies de fourmis, les essaims d'abeilles, les groupes de chats, les bancs de poissons ou encore les baleines, tous ces groupes d'animaux présentant des méthodes de communication décentralisées efficaces pour accomplir une tâche donnée~\cite{Darwish2018BioinspiredCA}.
 
 Un parangon de système biologique de calcul est sans conteste le cerveau humain ou animal, qui est capable d'exécuter des tâches de calcul et d'apprentissage incroyablement sophistiquées via une multitude de signaux électriques et chimiques circulant entre les neurones et au sein des vaisseaux sanguins.
-L'inspiration biologique occupe une place de choix dans les débuts de la recherche en intelligence artificielle.
+L'inspiration biologique occupe ainsi une place de premier rang dans les débuts de la recherche en intelligence artificielle.
 Face à des modèles symboliques, les modèles à base d'apprentissage ont été initialement développés en s'appuyant sur le modèle biologique du neurone, afin de chercher à imiter les capacités d'évolution et d'adaptation à l'origine de la notion d'apprentissage dans les réseaux de neurones biologiques.
 Le perceptron, modèle à l'origine des réseaux de Deep Learning les plus performants à l'heure actuelle, s'inspirait par exemple du modèle de neurone biologique~\cite{McCulloch1990ALC}.
 La diversité des applications actuelles de l'apprentissage automatique et le développement de nombreux modèles très performants ont amené la recherche en apprentissage automatique à se concentrer principalement sur une approche algorithmique et computationnelle de ces réseaux, en particulier pour les architectures de Deep Learning. 
 Cet éloignement de la biologie permet de s'extraire des contraintes physiques liées au neurone pour envisager des règles de calcul adaptées à une tâche spécifique.
-
-
-Cependant, la biologie, par sa diversité de comportements encore incompris, reste une source d'inspiration abondante pour apporter des paradigmes alternatifs ou complémentaires aux modèles d'apprentissage existants dans l'état de l'art.
+Néanmoins, la biologie, par sa diversité de comportements encore incompris, reste une source d'inspiration abondante pour apporter des paradigmes alternatifs ou complémentaires aux modèles d'apprentissage existants dans l'état de l'art. Le comportement du cerveau est loin d'être entièrement compris et modélisé, ce qui signifie que les possibilités d'inspiration biologique sont constamment en train d'évoluer.
 Les réseaux de neurones impulsionnels (\emph{Spiking Neural Networks}) sont un exemple de modèle d'apprentissage illustrant une complémentarité récente entre l'approche bio-inspirée et l'approche computationnelle.
-Ces réseaux de neurones ont été développés dans les années 1990~\cite{Maass1996NetworksOS} et s'appuient directement sur le modèle biologique de neurone. %DEF
-Ils apparaissent pourtant dans de nombreux travaux récents comme une méthode montante dans le domaine de l'apprentissage automatique pour la conception de modèles d'apprentissage moins énergivores et distribués, grâce à des architectures matérielles neuromorphiques telles que LOIHI \footnote{\url{https://www.intel.com/content/www/us/en/research/neuromorphic-computing.html}}. De nombreux travaux cherchent ainsi à adapter des réseaux de neurones classiques de l'état de l'art dans une version impulsionnelle \cite{Schuman2022OpportunitiesFN}.
-
-Se plaçant dans cette démarche d'inspiration biologique, le concept d'architectures cognitives est un enjeu de longue date dans la recherche en apprentissage automatique. Le but est de développer des réseaux de neurones autonomes, capables de mémoire et de prise de décision de façon non supervisée, qui s'inspirent des architectures modulaires présentes dans le cerveau humain \cite{Kotseruba201840YO}.
-Le développement de la robotique appelle également à envisager des modèles d'apprentissage directement liés à la perception sensorielle.
-Des avancées dans le domaine des architectures inspirées de la cognition peuvent ainsi permettre d'apporter de nouveaux horizons aux modèles d'apprentissage existants.
-
-Enfin, le comportement du cerveau est loin d'être entièrement compris et modélisé, ce qui signifie que les possibilités d'inspiration biologique sont constamment en train d'évoluer.
-Cette thèse s'inscrit dans cette démarche d'inspiration biologique, étudiée en complément d'une approche computationnelle, en cherchant à proposer des mécanismes de calculs alternatifs s'inspirant des architectures cérébrales à partir de modèles pré-établis.
-
-Nous avons choisi de nous intéresser en tant que modules à des cartes auto-organisatrices de Kohonen, ou SOM \cite{Kohonen1982}.
-Les SOM sont constituées d'une grille de neurone, dont à chaque n\oe{}ud est assigné un poids.
-L'apprentissage d'une SOM sur des données consiste à mettre à jour ces poids afin de représenter l'organisation de l'espace d'entrée sur les poids de cette grille 2D.
-Pour cela, les règles d'évolution reposent sur un principe de compétition \emph{Winner Take All}, permettant de choisir un poids (BMU) représentant le mieux une entrée. La mise à jour est ensuite effectuée en collaboration entre neurones~: le gagnant est mis à jour ainsi que ses voisins proches. Cette dualité compétition/collaboration entraîne une organisation finale de la carte sur l'espace d'entrée ordonnée~: deux n\oe{}uds proches ont des poids proches, ainsi que conservant d'autres propriétés topologiques.
-Les cartes de Kohonen sont initialement inspirées des cartes topographiques présentes dans les cortex sensoriels ou moteurs~; les mécanismes de choix du BMU et de mise à jour, d'abord calculés grâce à des champs neuronaux, ont ensuite évolué vers des règles plus computationnelles de calcul de distance et d'argmin sur la carte.
+Ces réseaux de neurones ont été développés dès les années 1990~\cite{Maass1996NetworksOS} et s'appuient directement sur le modèle biologique de neurone.
+Ils apparaissent pourtant dans de nombreux travaux récents comme une méthode montante dans le domaine de l'apprentissage automatique pour la conception de modèles d'apprentissage moins énergivores et distribués, grâce à la conception d'architectures matérielles neuromorphiques telles que LOIHI \footnote{\url{https://www.intel.com/content/www/us/en/research/neuromorphic-computing.html}}. De nombreux travaux cherchent ainsi à adapter des réseaux de neurones classiques de l'état de l'art dans une version impulsionnelle, faisant ainsi passer les SNN de la biologie au calcul~\cite{Schuman2022OpportunitiesFN}.
+Sans chercher à concurrencer l'état de l'art, de tels modèles apportent de nouveaux paradigmes de calcul pouvant se combiner avec des approches plus appliquées.
+Nous pensons ainsi qu'il est pertinent de continuer à explorer des modèles d'apprentissage automatique inspirés de la biologie.
 
 
-L'étude d'une architecture non hiérarchique de cartes auto-organisatrices est d'une part motivée par leur inspiration biologique. Leur organisation rappelle en effet celle qu'on peut observer dans des aires cérébrales. Le cortex faisant apparaître des aires interagissant entre elles avec des boucles de rétroaction, la création d'une architecture non hiérarchique de cartes s'inscrit dans la continuité de cette inspiration biologique.
-Par ailleurs, de nombreux travaux ont cherché à associer les SOMs en architecture, mais peu ont exploré l'aspect topologique et la simplicité des règles de calcul d'une carte pour les assembler en architectures modulaires comportant des rétroactions. 
-Les travaux précédents réalisés dans notre équipe de recherche ont associé des champs neuronaux dynamiques couplés entre eux à des SOMs afin d'ajouter un aspect d'apprentissage à ces réseaux. Les DNFs sont très proches des SOMs par leur notion de voisinage dans le calcul de l'activation et le mécanisme de Winner Take All en résultant, remplacé par un argmax dans une carte de Kohonen. Le couplage rétroactif entre les SOMs dans ces travaux engendre une réponse dynamique des DNFs qui évoluent pour se stabiliser vers une position de consensus pour définir les BMUs des cartes.
-La thèse vise donc à utiliser les SOMs en tant que modules d'une architecture, en introduisant un mécanisme de relaxation inspiré des DNFs pour appuyer l'apprentissage sur une notion de consensus dans l'architecture. 
-Cette approche permettrait de créer des architectures modulaires avec des propriétés émergentes. 
-Ainsi, les SOMs sont de bonnes candidates pour être associés en architectures modulaires, et l'introduction de rétroactions et de connexions temporelles pourrait permettre d'explorer de nouveaux comportements.
+La thèse que nous présentons présente un modèle d'apprentissage élaboré à la fois dans une démarche d'inspiration biologique et utilisant des techniques plutôt calculatoires.
+Pour l'aspect biologique, de nombreuses modélisations générales du cortex cérébral, telle que~\cite{binzegger05, Meunier2009HierarchicalMI,sporns_structure_2013,betzel_multi-scale_2017} proposent que le cortex est une architecture composée de modules auto-organisés.
+Ces modules communiquent autour des informations sensorielles collectées par l'organisme. Cette communication est réalisée de façon interne, liant des informations temporelles, sensorielles et abstraites provenant de différentes parties du cortex et à différentes échelles spatiotemporelles. Enfin, bien qu'une hiérarchie de traitement de l'information apparaît entre ces modules, certains traitant des entrées sensorielles et d'autres des entrées plus abstraites, de nombreux circuits de rétroactions entre les modules semblent présents à différents niveaux de l'architecture.
+La recherche d'architectures cognitives s'inspirant de l'architecture du cortex cérébral est un enjeu de longue date dans la recherche en apprentissage automatique. Il s'agit de développer des réseaux de neurones autonomes, capables de mémoire et de prise de décision de façon non supervisée, qui s'inspirent des architectures modulaires présentes dans le cerveau humain et qui cherchent à imiter certains comportements~; un historique de ces modèles est retrouvable en~\cite{Kotseruba201840YO}.
+Le développement de la robotique appelle également à envisager des modèles d'apprentissage directement liés à la perception sensorielle, en s'inspirant des architectures modulaires existant dans le cortex et qui permettent le traitement de cette perception.
 
------------------------------------------------------------------------------------------------------
+Dans cette inspiration d'architecture inspirée de l'architecture corticale, nous proposons dans cette thèse un modèle d'architecture d'apprentissage modulaire non-hiérarchique.
+On entend ici par système modulaire un système composé d'une multiplicité de sous-structures interchangeables qui interagissent entre elles par le biais d'interfaces définies. 
+Dans une architecture modulaire, ces sous-structures communiquent de façon locale, sans être supervisées par un processus externe. Cette propriété de modularité est partagée par de nombreux systèmes biologiques et artificiels et présente des avantages en termes de réutilisation, de robustesse aux fautes, de redondance et de traitement local de l'information \cite{clune_evolutionary_2013}.
 
-Parmi les mécanismes d'inspiration biologique nous nous intéressons à la modularité et l'auto-organisation.
-Nous voyons ici la modularité comme la décomposition d'un système en une multiplicité de sous-structures interagissant entre elles parle biais d'interface définies.
-Globalement, cette propriété de modularité est partagée par de nombreux systèmes biologiques et 
-présente des avantages de réutilisation, de robustesse aux fautes, de redondance et de traitement local de l'information.
-Les structures modulaires présentes en biologie sont fondamentalement non-hiérarchiques~: aucun processus supérieur n'\oe{}uvre à superviser leur comportement. Ainsi, 
-Le cortex cérébral peut par exemple être décomposé, fonctionnellement ou anatomiquement, en modules interagissant entre eux.
 
-La motivation de s'intéresser à des systèmes modulaires vient de leur dynamique complexe. De tels systèmes présentent un comportement global qui résulte de l'interaction entre les modules~: il s'agit d'un comportement émergeant. En général, chaque module a des règles d'évolution simples, mais l'assemblage des modules peut mener à une dynamique complexe.
-D'un point de vue biologique, l'apprentissage à l'\oe{}uvre dans le cerveau peut ainsi être défini comme un comportement émergent. Chaque neurone a des règles d'évolution simples, mais le comportement global du système résulte de l'interaction entre neurones. 
-L'émergence d'un comportement au sein de systèmes modulaires est intimement liée à la notion d'auto-organisation.
-???
+Pour construire cette architecture modulaire, nous nous appuierons sur un modèle d'apprentissage existant inspiré de la biologie~: les cartes auto-organisatrices (SOM) \cite{Kohonen1982}.
+La SOM est un algorithme de quantification vectorielle.
+L'apprentissage d'une SOM sur des données consiste à mettre à jour ces poids afin de représenter la disposition des données d'entrée sur les poids de cette grille 2D.
+Pour cela, les règles d'évolution reposent sur un principe de compétition \emph{Winner Take All}, permettant de choisir un poids, le \emph{Best Matching Unit} représentant le mieux une entrée. La mise à jour est ensuite effectuée en collaboration entre neurones~: le gagnant est mis à jour ainsi que ses voisins proches. Cette dualité compétition/collaboration entraîne une organisation finale de la carte sur l'espace d'entrée ordonnée~: deux n\oe{}uds proches ont des poids proches. L'organisation conserve également d'autres propriétés topologiques, et est finalement une représentation en 2D de l'espace d'entrée.
+Les cartes de Kohonen sont initialement inspirées des cartes topographiques présentes dans les cortex sensoriels ou moteurs. Les mécanismes de choix du BMU et de mise à jour, d'abord calculés grâce à des champs neuronaux, ont ensuite évolué vers des règles plus computationnelles de calcul de distance et d'argmin sur la carte.
+De nombreux travaux ont cherché à associer les SOMs en architecture, que nous passerons en revue dans l'état de l'art de cette thèse, mais peu ont exploré l'aspect topologique et la simplicité des règles de calcul d'une carte pour les assembler en architectures modulaires comportant des rétroactions.
 
-D'un point de vue computationnel, l'émergence de comportements au sein d'architectures modulaires est une piste intéressante pour développer de nouvelles architectures et a été exploitée pour concevoir des réseaux utilisés aujourd'hui. Un exemple célèbre d'émergence sont les automates cellulaires du jeu de la vie de Conway \cite{Gardener1970MathematicalGT}. Il s'agit de cellules pouvant prendre un état binaire, comportant des règles d'évolution temporelles très simples basées sur les états voisins~; cependant, des structures très complexes et organisées émergent de leur comportement collectif.
-Au niveau des systèmes d'apprentissage, cette notion d'émergence apparaît également par exemple dans les réseaux de Deep Learning, que l'on peut voir comme un assemblage de couches permettant chacune un apprentissage.
-Sumsumption de Brooks 
-architectures de DNF couplés 
 
-Modularité, par son inspiration biologique et ses propriétés en tant que systèmes dynamiques, peut apporter des comportements nouveaux au sein de systèmes d'apprentissage.
-Cette thèse se place dans une démarche constructive~: nous chercherons à construire une architecture modulaire en définissant des modules s'interfacants entre eux, et verrons comment leur comportement collectif peur 
+Outre l'aspect d'inspiration biologique, la construction de systèmes d'apprentissage modulaires a également une motivation computationnelle. 
+Elle découle de l'observation que la combinaison de principes et d'algorithmes simples en architecture modulaire peut mener au développement de mécanismes de calcul complexes au sein du système.
+Les structures modulaires ont en effet la particularité d'engendrer des comportements émergents dans leur dynamique, c'est-à-dire que le comportement global du système résulte bien de l'interaction entre les modules et non seulement de la somme des comportements des modules pris individuellement~: il s'agit de systèmes complexes.
+Dans le cas de systèmes modulaires, le comportement général qui émerge est une organisation des modules de l'architecture~: on parle d'auto-organisation du système. Il peut s'agir d'une synchronisation, d'une collaboration ...
+Cette auto-organisation est effectuée de façon décentralisée, via des règles et interactions locales au sein de l'architecture modulaire~: elle n'est pas supervisée par un processus extérieur à l'architecture.
+Des exemples célèbres d'émergence de comportement dans des systèmes artificiels sont le jeu de la vie, ou le deep learning, et l'intelligence d'essaim.
+Dans cette thèse, nous nous plaçons ainsi dans une démarche de construction d'un système d'apprentissage~: l'assemblage de module ayant des règles simples d'évolution peut mener à des comportements collectifs plus complexes. 
+Ici, les comportement complexes auxquels nous nous attendons sont des comportements d'apprentissage. Nous savons que chaque module, une carte de Kohonen, est capable d'apprendre une représentation de son espace d'entrée. Nous nous attendons à diversifier les comportements d'apprentissage.
 
-La notion d'architecture cognitive présentée plus haut cherche à explorer de grands principes liés à la cognition tels que l'apprentissage autonome, sans supervision, le traitement de données temporelles, l'apprentissage sur le long terme sans oubli catastrophique des données précédentes et la fusion de données multimodales, s'inspirant du traitement multisensoriel du cerveau humain.
-
-L'objectif de nos travaux est ainsi de proposer un modèle de carte qui puisse être utilisée en tant que module, de définir l'interface entre les modules afin de créer une architecture et de comprendre les comportements de calcul qui émergent de l'association des modules. 
+Ainsi, la conception d'une architecture modulaire d'apprentissage s'inspire ainsi d'une part des propriétés de modularité et d'émergence observées dans différents systèmes naturels, en particulier le cerveau, et artificiels comme l'intelligence d'essaim, les réseaux de neurones profonds ou le jeu de la vie.
+La propriété de modularité permettrait de réaliser des calculs complexes en exploitant la collaboration des modules du système et en générant une auto-organisation au sein du système. 
+Dans cette démarche, les SOMs sont de bonnes candidates pour être associés en architectures modulaires. Elles sont en effet inspirées de l'organisation des aires corticales, aires qui sont associées dans le cerveau en architecture non-hiérarchique. 
+L'introduction de rétroactions et de connexions temporelles pourrait par ailleurs permettre d'explorer de nouveaux comportements computationnels.
 
 \section*{Problématique de la thèse}
 
-Ces méthodes interdisciplinaire, entre inspiration biologique et approche computationnelle, nous ont amenés à proposer un modèle d'architecture non-hiérarchique de cartes de Kohonen, CxSOM. Nous travaux cherchent à répondre au problème suivant~: quels sont les comportements d'apren
+Enfin, le modèle d'apprentissage que nous présentons dans cette thèse se base sur les travaux précédents réalisés dans notre équipe de recherche. Ces travaux ont associé des champs neuronaux dynamiques couplés entre eux à des SOMs afin d'ajouter un aspect d'apprentissage à ces réseaux dynamiques.
+Les DNFs sont très proches des SOMs par leur notion de voisinage dans le calcul de l'activation et le mécanisme de Winner Take All en résultant, remplacé par un argmax dans une carte de Kohonen. Le couplage rétroactif entre les SOMs dans ces travaux engendre une réponse dynamique collective des DNFs qui évoluent pour se stabiliser vers une position de consensus pour définir les BMUs des cartes.
+Dans cette thèse, nous utilisons un mécanisme de relaxation inspiré des champs neuronaux dynamiques, cherchant les BMUs à une position de consensus dans l'architecture.
+En particulier, nous exploiterons l'aspect topologiquement ordonné d'une carte en utilisant la position du BMU comme information transmise entre cartes. 
+
+Enfin, la notion d'architecture cognitive présentée plus haut cherche à explorer de grands principes liés à la cognition tels que l'apprentissage autonome, sans supervision, le traitement de données temporelles, l'apprentissage sur le long terme sans oubli catastrophique des données précédentes et la fusion de données multimodales, s'inspirant du traitement multisensoriel du cerveau humain.
+L'objectif de nos travaux est de proposer un modèle de carte qui puisse être utilisée en tant que module, de définir l'interface entre les modules afin de créer une architecture et de comprendre les comportements de calcul qui émergent de l'association des modules. 
+Nous nous avons choisi de nous concentrer en particulier sur l'apprentissage associatif de données multimodales. Il s'agit d'apprendre les relations existant entre les entrées, en plaçant cet apprentissage de relations à un niveau interne à l'architecture.
+Cette mémoire associative apparaît comme un type d'apprentissage non supervisé, et le principe est d'apprendre une représentation des entrées mais également de leurs relations.
+
+
+
+Le but de la thèse est ainsi d
+\begin{itemize}
+    \item Quelles interfaces entre SOMs sont pertinentes à mettre en place pour la construction d'une architecture modulaire ?
+    \item En ayant défini un modèle d'architecture modulaire, quels sont les comportements en résultant et comment les utiliser dans un contexte de mémoire associative ?
+\end{itemize}
+
+Ces méthodes interdisciplinaire, entre inspiration biologique et approche computationnelle, nous ont amenés à proposer un modèle d'architecture non-hiérarchique de cartes de Kohonen, CxSOM, que nous présentons et détaillons dans cette thèse.
+
 
 \section*{Contributions et plan}
 
 Cette thèse cherche donc, dans un cadre bio-inspiré, à construire une architecture modulaire décentralisée de cartes auto-organisatrices. L'idée de cette approche est de rechercher des nouveaux comportements d'apprentissage émergeant de l'interaction entre les modules d'une grande architecture, à l'inverse des méthodes plus ingénieures consistant à diviser une tâche connue en sous-systèmes.
 Le manuscrit est organisé de la façon suivante.
-Le chapitre~\ref{chap:archis} présente un état de l'art des architectures de cartes auto-organisatrices existantes afin de définir ce qu'on entend par architecture modulaire décentralisée et positionner notre modèle dans l'ensemble des modèles existants.
-Nous détaillerons ensuite le modèle d'architecture décentralisée de cartes auto-organisatrices que nous proposons,CxSOM (\emph{Consensus-driven Multi-SOM}).
-Ce modèle permet d'associer des cartes en architecture non-hiérarchiques. Dans ce modèle, les activités des cartes sont interdépendantes et l'apprentissage s'appuie sur une recherche de consensus entre les cartes pour la recherche d'un BMU, par un processus dynamique inspiré de la relaxation entre DNF.
-Si le modèle a pour but à long terme de concevoir une architecture comportant de nombreux modules, nous avons concentré cette thèse sur l'analyse des comportements d'architecture de deux et trois cartes.
-Le but de cette thèse est de proposer une méthodologie d'analyse de ce modèle et d'en tirer des comportements élémentaires.
-Les expériences présentées dans la suite du manuscrit étudient le comportement de ces architectures sous différents points de vue.
-Le chapitre~\ref{chap:relaxation} présente une analyse plus approfondie du mécanisme de relaxation permettant la recherche de BMUs entre cartes.
+Le chapitre~\ref{chap:archis} présente un état de l'art des architectures de cartes auto-organisatrices existantes afin de définir ce qu'on entend par architecture modulaire décentralisée et positionner notre modèle dans l'ensemble des modèles existants. Nous nous intéresserons en particulier aux interfaces choisies entre les modules.
+
+Nous détaillerons ensuite le modèle d'architecture décentralisée de cartes auto-organisatrices que nous proposons dans cette thèse, CxSOM (\emph{Consensus-driven Multi-SOM}) au chapitre~\ref{chap:modele}.
+Ce modèle d'architecture permet d'associer des cartes en architecture non-hiérarchiques. Dans ce modèle, les activités des cartes sont interdépendantes et l'apprentissage s'appuie sur une recherche de consensus entre les cartes pour la recherche d'un BMU, par un processus dynamique inspiré de la relaxation entre DNF.
+Si le modèle a pour but à long terme de concevoir une architecture comportant de nombreux modules ainsi que des connexions temporelles, nous avons concentré cette thèse sur l'analyse des comportements d'architecture de deux et trois cartes.
+Le but de cette thèse est de proposer une méthodologie d'analyse de ce modèle et d'en tirer des comportements élémentaires qui serviront à poser les jalons de la construction d'une architecture plus grande.
+Les expériences présentées dans la suite du manuscrit étudient le comportement de ces architectures de différents angles d'approche.
+Le chapitre~\ref{chap:relaxation} présente une analyse plus approfondie du mécanisme de relaxation entre les BMUs, posé comme l'interface entre carte. 
+Ce chapitre cherche à répondre à la pertinence de ce mécanisme en tant qu'algorithme de choix de BMU pour l'apprentissage.
+
 Nous proposerons ensuite une méthode expérimentale et des représentations rapprochant l'architecture de cartes de modèles d'apprentissage communs au chapitre \ref{chap:repr}.
 Nous présenterons ensuite les comportements élémentaires observés sur des architectures de deux et trois cartes en une dimension, qui sont plus facile à visualiser. 
 Nous présenterons notamment un comportement de prédiction rendu possible par le modèle.
@@ -183,10 +190,6 @@ Le chapitre \ref{chap:analyse2D} utilise la méthodologie pour analyser le compo
 
 
 Les travaux présentés dans cette thèse ont fait l'objet de deux présentations en conférence~:
-\begin{itemize}
-    \item Consensus driven ...., ICONIP 2020
-    \item Input prediction in SOMs, ISCMI 2021
-\end{itemize}
 
 % A placer : 
 
