--- a/Biblio/biblio.bib
+++ b/Biblio/biblio.bib
@@ -967,7 +967,8 @@
 
 @inproceedings{koikkalainen_self-organizing_1990,
   author     = {Koikkalainen, P. and Oja, Erkki},
-  title      = {Self-organizing hierarchical feature maps},
+  title      = {
+  },
   booktitle  = {1990 {IJCNN} {International} {Joint} {Conference} on {Neural} {Networks}},
   year       = 1990,
 
@@ -1774,4 +1775,94 @@
   year={2022},
   volume={2},
   pages={10 - 19}
+}
+
+@article{Darwish2018BioinspiredCA,
+  title={Bio-inspired computing: Algorithms review, deep analysis, and the scope of applications},
+  author={Ashraf A. Darwish},
+  journal={Future Computing and Informatics Journal},
+  year={2018}
+}
+
+@book{nature_inspired_2020,
+   title =     {Nature-inspired Computation and Swarm Intelligence: Algorithms, Theory and Applications},
+   author =    {Xin-She Yang (editor)},
+   publisher = {Academic Pr},
+   isbn =      {0128197145; 9780128197141},
+   year =      {2020},
+   edition =   {1}
+   }
+
+
+  @article{Meunier2009HierarchicalMI,
+  title={Hierarchical Modularity in Human Brain Functional Networks},
+  author={David Meunier and Renaud Lambiotte and Alex Fornito and Karen D. Ersche and Edward T. Bullmore},
+  journal={Frontiers in Neuroinformatics},
+  year={2009},
+  volume={3}
+}
+
+
+@article{sporns_structure_2013,
+	title = {Structure and function of complex brain networks},
+	volume = {15},
+	issn = {1958-5969},
+	doi = {10.31887/DCNS.2013.15.3/osporns},
+	language = {en},
+	number = {3},
+	urldate = {2022-07-27},
+	journal = {Dialogues in Clinical Neuroscience},
+	author = {Sporns, Olaf},
+	month = sep,
+	year = {2013},
+	pages = {247--262}
+}
+
+@article{Bassett2017NetworkN,
+  title={Network neuroscience},
+  author={Danielle S. Bassett and Olaf Sporns},
+  journal={Nature Neuroscience},
+  year={2017},
+  volume={20},
+  pages={353-364}
+}
+
+
+@article{betzel_multi-scale_2017,
+	title = {Multi-scale brain networks},
+	volume = {160},
+	issn = {1053-8119},
+	url = {https://www.sciencedirect.com/science/article/pii/S1053811916306152},
+	doi = {https://doi.org/10.1016/j.neuroimage.2016.11.006},
+	abstract = {The network architecture of the human brain has become a feature of increasing interest to the neuroscientific community, largely because of its potential to illuminate human cognition, its variation over development and aging, and its alteration in disease or injury. Traditional tools and approaches to study this architecture have largely focused on single scales—of topology, time, and space. Expanding beyond this narrow view, we focus this review on pertinent questions and novel methodological advances for the multi-scale brain. We separate our exposition into content related to multi-scale topological structure, multi-scale temporal structure, and multi-scale spatial structure. In each case, we recount empirical evidence for such structures, survey network-based methodological approaches to reveal these structures, and outline current frontiers and open questions. Although predominantly peppered with examples from human neuroimaging, we hope that this account will offer an accessible guide to any neuroscientist aiming to measure, characterize, and understand the full richness of the brain's multiscale network structure—irrespective of species, imaging modality, or spatial resolution.},
+	journal = {NeuroImage},
+	author = {Betzel, Richard F. and Bassett, Danielle S.},
+	year = {2017},
+	keywords = {Brain networks, Complex networks, Graph theory, Multi-layer, Multi-resolution, Multi-scale, Network neuroscience},
+	pages = {73--83},
+	annote = {Functional Architecture of the Brain},
+}
+
+
+@inproceedings{macqueen_1967,
+  author     = {J. MacQueen},
+  title      = {Some methods for classification and analysis of multivariate observations
+  },
+  booktitle  = {Proceedings of the Fifth Berkeley Symposium on Mathematical Statistics and Probability, Volume 1: Statistics},
+  year       = 1967
+}
+
+@article{dempster_1977,
+ ISSN = {00359246},
+ URL = {http://www.jstor.org/stable/2984875},
+ abstract = {A broadly applicable algorithm for computing maximum likelihood estimates from incomplete data is presented at various levels of generality. Theory showing the monotone behaviour of the likelihood and convergence of the algorithm is derived. Many examples are sketched, including missing value situations, applications to grouped, censored or truncated data, finite mixture models, variance component estimation, hyperparameter estimation, iteratively reweighted least squares and factor analysis.},
+ author = {A. P. Dempster and N. M. Laird and D. B. Rubin},
+ journal = {Journal of the Royal Statistical Society. Series B (Methodological)},
+ number = {1},
+ pages = {1--38},
+ publisher = {[Royal Statistical Society, Wiley]},
+ title = {Maximum Likelihood from Incomplete Data via the EM Algorithm},
+ urldate = {2023-03-21},
+ volume = {39},
+ year = {1977}
 }
